--- a/templates/vbox.json.j2
+++ b/templates/vbox.json.j2
@@ -1,4 +1,5 @@
 {
+{%- if 'rhel' not in data.builder.iso_url -%}
   "provisioners": [
     {
       "type": "shell",
@@ -10,6 +11,7 @@
       ]
     }
   ],
+{%- endif %}
   "builders": [
     {
       "name": "{{ data.builder.name }}",
@@ -26,13 +28,13 @@
       "ssh_wait_timeout": "1200s",
       "vboxmanage": [
 {% raw -%}
-        ["modifyvm", "{{.Name}}", "--memory", "512"],
+        ["modifyvm", "{{.Name}}", "--memory", "{% endraw %}{{data.builder.memory}}{% raw %}"],
         ["modifyvm", "{{.Name}}", "--cpus", "1"],
         ["modifyvm", "{{.Name}}", "--audio", "none"],
         ["modifyvm", "{{.Name}}", "--usb", "off"]
 {% endraw -%}
       ],
-      "disk_size": "16384",
+      "disk_size": "{{data.builder.disksize}}",
       "http_directory": ".",
       "boot_command": [
 {% raw -%}
