--- a/templates/ks.cfg.j2
+++ b/templates/ks.cfg.j2
@@ -53,6 +53,7 @@ EOY
 {% if 'rhel' not in data.builder.iso_url -%}
 yum -y update
 yum -y install epel-release
+yum -y install dkms
 yum -y install python-pip
 pip install --upgrade pip
 pip install ansible
